# ijkplayerDemo

./: README.md
reeeplayer/libvideoedit/: CMakeLists.txt  build.gradle
reeeplayer/libvideoedit/src/androidTest/java/com/zp/libvideoedit/: ExampleInstrumentedTest.java
reeeplayer/libvideoedit/src/main/: AndroidManifest.xml
reeeplayer/libvideoedit/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeListsOld.txt  JavaCallHelper.cpp  JavaCallHelper.h  VNIFFmpeg.cpp  VNIFFmpeg.h  VideoChannel.cpp  VideoChannel.h  common.h  macro.h  native.cpp  resample.c  resample.h  safe_queue.h  samplerate.c
reeeplayer/libvideoedit/src/main/java/com/zp/libvideoedit/: Constants.java  EditConstants.java  VideoEditUtils.java  VideoEffect.java  WidthHeightRatioGlSurfaceView.java
reeeplayer/libvideoedit/src/main/java/com/zp/libvideoedit/EditCore/: AudioDataPacket.java  AudioMixer.java  AudioPlayerCoreManager.java  AudioTrackDecoderThread.java  AudioTrackExtractor.java  VideoDecoderThread.java  VideoPlayer.java  VideoPlayerCoreManager.java  VideoTrackExtractor.java
reeeplayer/libvideoedit/src/main/java/com/zp/libvideoedit/Effect/: ChunkFilterManager.java  VNiImageFilter.java  VNiLutFilter.java
reeeplayer/libvideoedit/src/main/java/com/zp/libvideoedit/Time/: CMTime.java  CMTimeMapping.java  CMTimeRange.java
reeeplayer/libvideoedit/src/main/java/com/zp/libvideoedit/Transcoder/: AbstractFrameStackCache.java  TSMediaExtractor.java  (+12 more)
reeeplayer/libvideoedit/src/main/res/values/: strings.xml
reeeplayer/libvideoedit/src/test/java/com/zp/libvideoedit/: ExampleUnitTest.java
(+350 files in other folders)
